test/bottomType.slq
// args: --run

def foo():never⇒foo(); // ok
def main():never⇒assert(false); // error
